== 0.2.0 2013-05-14

 * Memoize enum_table list. Your logs are now less noisy.
 * #enum no longer requires the table to exist when migrating or loading the
   schema, so migrations have a chance to create the enum tables.

== 0.1.0 2012-11-30

 * DB Nazi compliance.
 * Remove customizability of the foreign key, since ActiveRecord mangles these
   customizations when roundtripped through schema.rb.
 * Foreign keys via foreigner now work.

== 0.0.1 2012-11-05

 * Hi.