@@ -1,3 +1,7 @@
+== LATEST
+
+ * Fix SQL escaping.
+
 == 0.2.0 2013-05-14
 
  * Memoize enum_table list. Your logs are now less noisy.
